# Project-Z

./: README.md  ROADMAP.md  SETUP.md
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  README.md  env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/adapters/: __init__.py  base.py  shop_system.py
backend/app/adapters/calendar/: __init__.py  base.py  google.py
backend/app/adapters/mock/: __init__.py  adapter.py
backend/app/adapters/mock/data/: customers.json  shop_info.json  work_orders.json
backend/app/common/: __init__.py  auth.py  exceptions.py  utils.py
backend/app/models/: __init__.py  call_log.py  shop.py  work_order.py
backend/app/modules/billing/: __init__.py  constants.py  models.py  router.py  schemas.py  service.py
backend/app/modules/calendar/: __init__.py  router.py  service.py
backend/app/modules/calls/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/context/: __init__.py  models.py  router.py  service.py
backend/app/modules/shops/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/sms/: __init__.py  models.py  router.py  service.py
backend/app/modules/voice/: __init__.py  asr.py  booking_state.py  call_queue.py  concurrent_manager.py  intents.py  llm.py  prompts.py  realtime.py  realtime_session.py  router.py  service.py  session_manager.py  telephony.py  tools.py  tts.py
backend/app/modules/work_orders/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/routers/: health.py  shops.py  work_orders.py
backend/data/: sample_work_orders.csv
backend/static/: voice_test.html
backend/tests/: __init__.py  conftest.py  test_health.py  test_shops.py  test_tools.py  test_work_orders.py
backend/tests/adapters/: test_mock_adapter.py
backend/tests/modules/: test_adapters_registry.py  test_realtime.py  test_shops.py  test_telephony.py  test_voice.py  test_work_orders.py
frontend/: UNUSED_ITEMS.md  env.example  middleware.ts  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: clerk-provider-themed.tsx  theme-toggle.stories.tsx  theme-toggle.tsx
frontend/hooks/: query-keys.ts  use-auth-token.ts  use-reduced-motion.ts
scripts/: README.md  generate-demo-audio.ts  package-lock.json  package.json
(+87 files in other folders)
